2007-03-01  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	Invoke convert once instead of twice.
	* wp-scorerender.php:
	Minor changes of strings in option page.

2007-03-01  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Mark some strings as localizable.

2007-02-25  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Factor out repetitive filter functions into replace_content().

2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add ABC notation support.
	* class.abc.inc.php:
	New file.

2007-02-23  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	More precaution -- also make it fail if command returns
	succeed but didn't render any image.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add back mistakenly deleted plugin info.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* LICENSE: Add info.
	* wp-scorerender.php, class.scorerender.inc.php:
	Trivial change of variable and function names.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php:
	Tweak ImageMagick option so need not use getimagesize().

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php:
	Fix small typo that prevent guido support from working.

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Really filters content/comment through guido_filter().

2007-02-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Allows update of database structure.

2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add guido support.

2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php: New file.

2007-02-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop latex support. Now read and write configuration
	option as an array instead of 20+ independent values.
	Simpler(?) regex for tag matching.

	* class.*.php:
	Relevant variable changes.
	Copyright notices.
