@@ -1,3 +1,8 @@
+2007-03-02  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	String and minor layout changes for option page.
+
 2007-03-01  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.scorerender.inc.php:
